tests/compile-fail/integration__integration__game_arg_and_pragma__pragma_game_conflict.snap
---
source: tests/integration/game_arg_and_pragma.rs
expression: stderr
---
error: multiple conflicting game #pragmas
   ┌─ <input>:26:14
   │
25 │ #pragma game 6
   │              -
26 │ #pragma game 10
   │              ^^


